fix(sidebar): scrollbar visibility and padding

--- a/packages/sidebar/src/styles/_variables.scss
+++ b/packages/sidebar/src/styles/_variables.scss
@@ -20,7 +20,6 @@ $scrollbar-background-color: transparent;
   &::-webkit-scrollbar {
     width: $size;
     height: $size;
-    opacity: 1;
   }
   &::-webkit-scrollbar-thumb {
     background: $foreground-color;
@@ -35,10 +34,19 @@ $scrollbar-background-color: transparent;
   scrollbar-width: thin;
 }
 
-@mixin scrollbarHidden() {
+@mixin scrollbarHidden($size: $scrollbar-width) {
+  // For Chrome & Safari
   // For Chrome & Safari
   &::-webkit-scrollbar {
-    opacity: 0;
+    width: $size;
+    height: $size;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 8px;
+  }
+  &::-webkit-scrollbar-track {
+    background: transparent;
   }
 
   // Standard version (Firefox only for now)
